--- a/cpd-portal/src/app/pages/admin/user-create/user-create.component.html
+++ b/cpd-portal/src/app/pages/admin/user-create/user-create.component.html
@@ -1,31 +1,45 @@
 <div class="form-panel">
   <h2>Add New User</h2>
-  <form (ngSubmit)="onSubmit()">
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
     <div class="form-grid">
       <div class="form-group">
         <label for="firstName">First Name</label>
-        <input id="firstName" type="text" [(ngModel)]="userData.first_name" name="firstName" required>
+        <input id="firstName" type="text" formControlName="first_name" required>
+        <div *ngIf="userForm.get('first_name')?.invalid && (userForm.get('first_name')?.dirty || userForm.get('first_name')?.touched)" class="error-message">
+          <div *ngIf="userForm.get('first_name')?.errors?.['required']">First Name is required.</div>
+        </div>
       </div>
       <div class="form-group">
         <label for="lastName">Last Name</label>
-        <input id="lastName" type="text" [(ngModel)]="userData.last_name" name="lastName" required>
+        <input id="lastName" type="text" formControlName="last_name" required>
+        <div *ngIf="userForm.get('last_name')?.invalid && (userForm.get('last_name')?.dirty || userForm.get('last_name')?.touched)" class="error-message">
+          <div *ngIf="userForm.get('last_name')?.errors?.['required']">Last Name is required.</div>
+        </div>
       </div>
     </div>
     <div class="form-group">
       <label for="jobTitle">Job Title</label>
-      <input id="jobTitle" type="text" [(ngModel)]="userData.job_title" name="jobTitle">
+      <input id="jobTitle" type="text" formControlName="job_title">
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input id="email" type="email" [(ngModel)]="userData.email" name="email" required>
+      <input id="email" type="email" formControlName="email" required>
+      <div *ngIf="userForm.get('email')?.invalid && (userForm.get('email')?.dirty || userForm.get('email')?.touched)" class="error-message">
+        <div *ngIf="userForm.get('email')?.errors?.['required']">Email is required.</div>
+        <div *ngIf="userForm.get('email')?.errors?.['email']">Please enter a valid email address.</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input id="password" type="password" [(ngModel)]="userData.password" name="password" required>
+      <input id="password" type="password" formControlName="password" required>
+      <div *ngIf="userForm.get('password')?.invalid && (userForm.get('password')?.dirty || userForm.get('password')?.touched)" class="error-message">
+        <div *ngIf="userForm.get('password')?.errors?.['required']">Password is required.</div>
+        <div *ngIf="userForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</div>
+      </div>
     </div>
     <div class="form-group">
       <label for="accessLevel">Access Level</label>
-      <select id="accessLevel" [(ngModel)]="userData.access_level" name="accessLevel">
+      <select id="accessLevel" formControlName="access_level">
         <option value="user">User</option>
         <option value="admin">Admin</option>
       </select>
